测试功能并修改完善