@@ -8,11 +8,9 @@ import xyz.kbws.ojcodesandbox.model.ExecuteCodeRequest;
 import xyz.kbws.ojcodesandbox.model.ExecuteCodeResponse;
 import xyz.kbws.ojcodesandbox.model.ExecuteMessage;
 import xyz.kbws.ojcodesandbox.model.JudgeInfo;
-import xyz.kbws.ojcodesandbox.security.DefaultSecurityManager;
 import xyz.kbws.ojcodesandbox.utils.ProcessUtils;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
@@ -24,17 +22,43 @@ import java.util.List;
  */
 @Slf4j
 public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
-
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
 
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
 
-    public static final long TIME_OUT = 5000L;
+    private static final long TIME_OUT = 5000L;
+
+    @Override
+    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
+        List<String> inputList = executeCodeRequest.getInputList();
+        String code = executeCodeRequest.getCode();
+        String language = executeCodeRequest.getLanguage();
+
+//        1. 把用户的代码保存为文件
+        File userCodeFile = saveCodeToFile(code);
+
+//        2. 编译代码，得到 class 文件
+        ExecuteMessage compileFileExecuteMessage = compileFile(userCodeFile);
+
+        // 3. 执行代码，得到输出结果
+        List<ExecuteMessage> executeMessageList = runFile(userCodeFile, inputList);
+
+//        4. 收集整理输出结果
+        ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
+
+//        5. 文件清理
+        boolean b = deleteFile(userCodeFile);
+        if (!b) {
+            log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
+        }
+        return outputResponse;
+    }
+
 
     /**
-     * 把用户代码保存为文件
+     * 1. 把用户的代码保存为文件
      *
-     * @param code 用户提交代码
+     * @param code 用户代码
      * @return
      */
     public File saveCodeToFile(String code) {
@@ -53,7 +77,7 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
     }
 
     /**
-     * 编译代码
+     * 2、编译代码
      *
      * @param userCodeFile
      * @return
@@ -67,13 +91,14 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
                 throw new RuntimeException("编译错误");
             }
             return executeMessage;
-        } catch (IOException e) {
+        } catch (Exception e) {
+//            return getErrorResponse(e);
             throw new RuntimeException(e);
         }
     }
 
     /**
-     * 执行文件，获得执行结果列表
+     * 3、执行文件，获得执行结果列表
      *
      * @param userCodeFile
      * @param inputList
@@ -81,9 +106,10 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
      */
     public List<ExecuteMessage> runFile(File userCodeFile, List<String> inputList) {
         String userCodeParentPath = userCodeFile.getParentFile().getAbsolutePath();
+
         List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-            //String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s", userCodeParentPath, SECURITY_MANAGER, SECURITY_MANAGER_CLASS_NAME, inputArgs);
+//            String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
             String runCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(runCmd);
@@ -101,14 +127,14 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
                 System.out.println(executeMessage);
                 executeMessageList.add(executeMessage);
             } catch (Exception e) {
-                throw new RuntimeException("程序执行异常", e);
+                throw new RuntimeException("执行错误", e);
             }
         }
         return executeMessageList;
     }
 
     /**
-     * 获取输出结果
+     * 4、获取输出结果
      *
      * @param executeMessageList
      * @return
@@ -116,13 +142,13 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
     public ExecuteCodeResponse getOutputResponse(List<ExecuteMessage> executeMessageList) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         List<String> outputList = new ArrayList<>();
-        // 取最大值，用于判断是否超时
+        // 取用时最大值，便于判断是否超时
         long maxTime = 0;
         for (ExecuteMessage executeMessage : executeMessageList) {
             String errorMessage = executeMessage.getErrorMessage();
             if (StrUtil.isNotBlank(errorMessage)) {
                 executeCodeResponse.setMessage(errorMessage);
-                // 程序执行错误
+                // 用户提交的代码执行中存在错误
                 executeCodeResponse.setStatus(3);
                 break;
             }
@@ -138,15 +164,15 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
         }
         executeCodeResponse.setOutputList(outputList);
         JudgeInfo judgeInfo = new JudgeInfo();
-        // 原生获取Java程序运行内存太麻烦，需要借助第三方库，暂不实现
-        //judgeInfo.setMemory();
         judgeInfo.setTime(maxTime);
+        // 要借助第三方库来获取内存占用，非常麻烦，此处不做实现
+//        judgeInfo.setMemory();
         executeCodeResponse.setJudgeInfo(judgeInfo);
         return executeCodeResponse;
     }
 
     /**
-     * 删除文件
+     * 5、删除文件
      *
      * @param userCodeFile
      * @return
@@ -161,50 +187,20 @@ public abstract class JavaCodeSandboxTemplate implements CodeSandBox {
         return true;
     }
 
-
-    @Override
-    public ExecuteCodeResponse executeCode(ExecuteCodeRequest executeCodeRequest) {
-        System.setSecurityManager(new DefaultSecurityManager());
-
-        List<String> inputList = executeCodeRequest.getInputList();
-        String code = executeCodeRequest.getCode();
-        String language = executeCodeRequest.getLanguage();
-
-        // 1.把用户代码保存为文件
-        File userCodeFile = saveCodeToFile(code);
-
-        // 2.编译代码，得到 class 文件
-        ExecuteMessage compileFileExecuteMessage = compileFile(userCodeFile);
-        System.out.println(compileFileExecuteMessage);
-
-        // 3.执行代码，获得 class 文件
-        List<ExecuteMessage> executeMessageList = runFile(userCodeFile, inputList);
-
-        // 4.收集整理输出结果
-        ExecuteCodeResponse outputResponse = getOutputResponse(executeMessageList);
-
-        // 5.文件清理
-        boolean b = deleteFile(userCodeFile);
-        if (!b) {
-            log.error("deleteFile error, userCodeFilePath = {}", userCodeFile.getAbsolutePath());
-        }
-
-        return outputResponse;
-    }
-
     /**
-     * 获取错误响应
+     * 6、获取错误响应
      *
-     * @param e 异常
-     * @return ExecuteCodeResponse
+     * @param e
+     * @return
      */
     private ExecuteCodeResponse getErrorResponse(Throwable e) {
         ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
         executeCodeResponse.setOutputList(new ArrayList<>());
         executeCodeResponse.setMessage(e.getMessage());
-        // 2表达式代码沙箱错误
+        // 表示代码沙箱错误
         executeCodeResponse.setStatus(2);
         executeCodeResponse.setJudgeInfo(new JudgeInfo());
         return executeCodeResponse;
     }
+
 }
